# bazel-go-sample

./: .bazelrc  .gitignore  .travis.yml  BUILD.bazel  Makefile  README.md  WORKSPACE  go.mod  go.sum  print-workspace-status.sh  repos.bzl
.circleci/: config.yml
.github/workflows/: build.yml  release.yml
cmd/greeter_client/: BUILD.bazel  main.go
cmd/greeter_server/: BUILD.bazel
deploy/: BUILD.bazel  greeter-operator.yaml
deploy/crd/: BUILD.bazel  sample.fengye87.me_greeters.yaml
examples/: greeter.yaml
hack/: generate-dockerized.sh  generate.sh  tools.go
operator/: BUILD.bazel  main.go
operator/api/v1alpha1/: BUILD.bazel  greeter_types.go  groupversion_info.go  zz_generated.deepcopy.go
operator/controllers/: BUILD.bazel  greeter_controller.go  greeter_controller_test.go  suite_test.go
